--- a/ProyectoLenceria/Mantenimientos/MainPage.Master
+++ b/ProyectoLenceria/Mantenimientos/MainPage.Master
@@ -21,7 +21,7 @@
         <a class="active"><i class="fas fa-socks"></i> OneClothing</a>
         <div class="topnav-right">
 
-            <a href="#search"><i class="fas fa-lock"></i> Login</a>
+            <a href="../Login.aspx"><i class="fas fa-lock"></i> Login</a>
             <a href="#about"><i class="fas fa-sign-out-alt"></i> Salir</a>
         </div>
     </div>
