--- a/ProyectoLenceria/Mantenimientos/MainPage.Master
+++ b/ProyectoLenceria/Mantenimientos/MainPage.Master
@@ -2,34 +2,36 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/principal.css" />
+    <link rel="stylesheet" href="inicio.css" />
     <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        rel="stylesheet" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-</head>
-<body>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+  </head>
+  <body>
     <div class="topnav">
-        <a class="active"><i class="fas fa-socks"></i> OneClothing</a>
-        <div class="topnav-right">
-
-            <a href="../Login.aspx"><i class="fas fa-lock"></i> Login</a>
-            <a href="#about"><i class="fas fa-sign-out-alt"></i> Salir</a>
-        </div>
+      <a class="active"><i class="fas fa-circle-notch"></i> OnixCloth</a>
+      <div class="topnav-right">
+        <a href="#search"><i class="fas fa-lock"></i> Login</a>
+        <a href="#about"><i class="fas fa-sign-out-alt"></i> Salir</a>
+      </div>
     </div>
     <div class="sidebar">
-        <a href="#home">Inicio</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+      <a href="#home"><i class="far fa-star"></i> Lo más Destacado</a>
+      <a href="#news"><i class="fas fa-hat-cowboy"></i> Cabeza</a>
+      <a href="#news"><i class="fas fa-tshirt"></i> Parte Superior</a>
+      <a href="#contact"><i class="fas fa-socks"></i> Parte Inferior</a>
+      <a href="#about"><i class="fas fa-glasses"></i> Accesorios</a>
+      <a href="#"><i class="fas fa-shoe-prints"></i> Calzado</a>
     </div>
     <form runat="server">
         <!--Contenido Principal-->
