--- a/ProyectoLenceria/Mantenimientos/MainPage.Master
+++ b/ProyectoLenceria/Mantenimientos/MainPage.Master
@@ -28,7 +28,7 @@
     <div class="sidebar">
       <a href="#home"><i class="far fa-star"></i> Lo más Destacado</a>
       <a href="#news"><i class="fas fa-hat-cowboy"></i> Cabeza</a>
-      <a href="#news"><i class="fas fa-tshirt"></i> Parte Superior</a>
+      <a href="ParteSuperior.aspx"><i class="fas fa-tshirt"></i> Parte Superior</a>
       <a href="#contact"><i class="fas fa-socks"></i> Parte Inferior</a>
       <a href="#about"><i class="fas fa-glasses"></i> Accesorios</a>
       <a href="#"><i class="fas fa-shoe-prints"></i> Calzado</a>
