Cambios antes de la presentacion

--- a/ProyectoLenceria/Mantenimientos/MainPage.Master
+++ b/ProyectoLenceria/Mantenimientos/MainPage.Master
@@ -41,6 +41,8 @@
                 
             </asp:DropDownList>
                 </div>
+            <br />
+            <a href="QR.aspx"><i class="fas fa-qrcode"></i> Generar QR</a>
         </asp:Panel>
             <hr />
     </div>
