--- a/ProyectoLenceria/css/login.css
+++ b/ProyectoLenceria/css/login.css
@@ -51,3 +51,8 @@
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
+
+.lnk{
+    text-decoration:none;
+    color:white;
+}
